--- a/style.css
+++ b/style.css
@@ -5,7 +5,7 @@ font-size: 20px;
 .shibluahmed{
     color: orange;
 }
-section{
+.flexyble{
     display: flex;
     margin-bottom: 150px;
 }
@@ -24,4 +24,20 @@ section{
     padding: 10px 40px;
     border-radius: 5px;
     font-weight: 700;
+}
+.ora-color{
+    color: orange;
+}
+.div-shadow{
+    width: 40%;
+    margin-left: 5%;
+    margin-right: 5%;
+    padding: 20px;
+   box-shadow: 10px 10px 40px gray;
+}
+#bordertomato{
+    border-left: 7px solid tomato;
+}
+#dorderblue{
+    border-left: 7px solid blue;
 }
